    - Changed serialization of the BibTeX entry:
      * First, the required, then the optional and then all other fields are written
      * Fields are ordered by name. Except the fields author, institution, publisher, which are written first.
      * The second word in of the BibTeX type is capitalized. E.g., Inproceedings got InProceedings
    - Author field is now resolved using @String data.
[2.9.2]
    - Fixed handling of empty author parts in rare cases. Fixes bug 1124.
    - Fetchers work again: Import inspection dialog is not modal any more.
2.9.1
    - Command line option --importToOpen now also adds to an open tab when JabRef is launched.
    - Importing of entries works again. Fixes bug 1121.
    - Import inspection dialog is now modal.
    - Replaced Java launcher by launch4j. Fixes bugs 1100, 1103, 1123.
    - Menu font size can now be changed again. Help contents are also enlarged accordingly. Fixes bug 1122.
2.9
    - Fixed bug: in OO/LO reference lists, entries may fall out when multiple entries with same
      author and year are cited.
    - Added support for converting HTML combining accents to LaTeX
    - When generating subdatabase from AUX file, preamble and strings are now included from
      the source database.
    - Added cleanup action for removing redundant $, {, and }
    - Fix for removing starting and ending spaces in the page number cleanup action
    - Fix for a more liberal detection in the month cleanup action
2.9 beta 2
    - Added DiVA fetcher
    - Can control if the HTML converter should create subscripts and superscripts
      as text or an equation via the preferences
    - Added initial support for adding curly brackets {} for certain
      key words to keep the character case independent of .bst, e.g., for
      names and abbreviations (use via "Cleanup entries") and can be controlled 
      via preferences if it should be used at searches
    - Fixed author and DOI import from IEEE Xplore 